// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deep: output matches snapshot 1`] = `
VNode {
  "attributes": undefined,
  "children": Array [
    "second first",
  ],
  "key": undefined,
  "nodeName": "div",
}
`;

exports[`shallow: output matches snapshot 1`] = `
VNode {
  "attributes": undefined,
  "children": Array [
    "first",
  ],
  "key": undefined,
  "nodeName": [Function],
}
`;
